Resolving code warnings and other IDE detected nusiances (#858)
* Remove class.forName casting

* fixup isAssignableFrom

* remove cast of Integer to int

* Remove unused annotations

* Remove unnecessary cast

* Extra parens

* Fix warnings

* Remove warning

* fix semicolon

* One more

* Fix Codacy warnings

* A couple more